--- a/styles/css/header/vtex.rich-text.css
+++ b/styles/css/header/vtex.rich-text.css
@@ -23,6 +23,7 @@
 .container--desktop__header--pqr:hover{
     background-color: #000;
     color: #fff;
+    cursor: pointer;
 }
 
 .container--desktop__header--pqr{
