--- a/styles/css/header/vtex.minicart.css
+++ b/styles/css/header/vtex.minicart.css
@@ -31,10 +31,6 @@
     font-size: 18px;
 }
 
-.minicartContainer{
-    padding-left: 2em;
-}
-
 .minicartProductListContainer{
     max-height: 220px;
     padding: 0;
@@ -70,7 +66,7 @@
 
 .minicartProductListContainer
 :global(.vtex-product-list-0-x-price){
-    padding-right: 6.5em;
+    padding-right: 9.5em;
     font-size: 0.95em;
     font-weight: bold;
     /* font-family: "RobotoSlab"; */
@@ -144,3 +140,8 @@
     padding: 20px;
 }
 
+@media (min-width:1024px){
+    .minicartContainer{
+        padding-left: 5em;
+    }
+}
