--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -1,7 +1,7 @@
 .paragraph--home__section--search-msg {
     color: #fff;
     font-size: 30px;
-    font-weight: bold;
+    margin: 0%;
     /* font-family: "RobotoSlab"; */
     /* font-weight: 400; */
     /* margin-right: 5em; */
@@ -21,6 +21,7 @@
     position: relative;
     z-index: 1;
     color: #050505;
+    margin: 30px auto 0;
 }
 
 .paragraph--home__title{
@@ -30,6 +31,20 @@
     /* font-family: "RobotoSlab"; */
     /* font-weight: 400; */
     font-size: 18px;
+    background: #fff;
+}
+
+.paragraph--home__title::before{
+    border-top: 2px solid #050505;
+    content: "";
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    /* bottom: 0;
+    width: 100%; */
+    z-index: -1;
 }
 
 /******* Services *****/
@@ -40,13 +55,34 @@
     font-size: 16px;
 }
 
-.paragraph--section__services2-text{
-    /* font-family: "RobotoSlab"; */
-    /* font-weight: 400; */
+/* .paragraph--section__services2-text{
+    font-family: "RobotoSlab";
+    font-weight: 400;
     font-size: 15px;
     color: #3f3f40;
-}
+} */
 
 .paragraph--container-text-services2{
     margin-left: 15px;
+}
+
+.paragraph--section__services2-text
+:global(.vtex-rich-text-0-x-strong--section__services2-text){
+    font-weight: 400;
+    font-size: 14px;
+}
+
+/******* Section search mobile *****/
+/* .container--home__section--search-msg{
+    margin-left: 40px;
+} */
+
+.container--text-section-search{
+    height: 35px;
+}
+
+@media (max-width: 1024px){
+    .container--home__title{
+        margin: 0.7rem;
+    }
 }
