--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -29,3 +29,42 @@
 .paginationDot--mobile__home--slider--isActive{
     background-color: #000;;
 }
+
+/************** Section products recommended *************/
+
+.caretIcon--home__products--recommended{
+    color: #f8971d;
+}
+
+.slideChildrenContainer--home__products--recommended 
+:global(.vtex-product-summary-2-x-element){
+    border: 1px solid #e1e1e1;
+    padding: 10px;
+    justify-content: space-between;
+    border-radius: 4px;
+    transition: .2s;
+    position: relative;
+    margin: 5px;
+}
+
+.slide--home__products--recommended{
+    margin-bottom: 25px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+.slideChildrenContainer--home__products--recommended 
+:global(.vtex-product-summary-2-x-imageNormal){
+    width: 100%; /*puede manejar esto*/
+    height: 100%;
+    object-fit: contain;
+    max-height: 180px;
+}
+
+.slide--home__products--recommended
+:global(.vtex-product-summary-2-x-nameWrapper){
+    font-size: 12px;
+    margin: 5px 0;
+    text-align: left;
+    width: 100%;
+}
