--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,8 +1,13 @@
 .imageElement--home__service1 {
-    width: 85%;
+    width: 94%;
 }
-.imageElement--image__service2{
-    margin-top: 20px;
+
+.imageElement--home__service4{
+    width: 96%;
+}
+
+.imageElement--section__services2{
+ margin-right: 1.8em;
 }
 
 .imageElement--categories__seccion1--item2{
@@ -37,6 +42,10 @@
     border: none;
 }
 
+.imageElement--home__section--search-img{
+    width: 40%;
+}
+
 /* .searchBarContainer{
     background-color: #f2f2f2; 
     padding: 5px 20px;
@@ -66,3 +75,25 @@
     }
 } */
 
+/**************************** Section products recomended *******/
+
+.skuSelectorTextContainer, .frameAround {
+    display: none;
+}
+
+/* .skuSelectorContainer
+:global(.vtex-product-summary-2-x-skuSelectorItem--2-x-1){
+
+} */
+
+/* .skuSelectorContainer
+:global(.){
+
+}  */
+.skuSelectorInternalBox{
+    background-color: #ee562a;
+}
+
+.skuSelectorItemTextValue{
+    color:#fff;
+}
