--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -22,10 +22,6 @@
     padding-bottom: 7px;
 }
 
-.caretIcon--mobile__home--slider{
-    display: none;
-}
-
 .paginationDot--mobile__home--slider--isActive{
     background-color: #000;;
 }
@@ -55,10 +51,10 @@
 
 .slideChildrenContainer--home__products--recommended 
 :global(.vtex-product-summary-2-x-imageNormal){
-    width: 100%; /*puede manejar esto*/
+    width: 90px;
     height: 100%;
     object-fit: contain;
-    max-height: 180px;
+    max-height: 150px;
 }
 
 .slide--home__products--recommended
@@ -67,4 +63,40 @@
     margin: 5px 0;
     text-align: left;
     width: 100%;
+}
+
+.slideChildrenContainer--home__products--recommended
+:global(.vtex-add-to-cart-button-0-x-buttonText){
+    visibility: hidden;
+}
+
+.slideChildrenContainer--home__products--recommended
+:global(.vtex-add-to-cart-button-0-x-buttonText)::before{
+    visibility: visible;
+    content: "COMPRAR";
+    font-size: 12px;
+    align-items: center;
+}
+
+.slideChildrenContainer--home__products--recommended
+:global(.vtex-button__label){
+    padding: 0 1em;
+}
+
+.slideChildrenContainer--home__products--recommended
+:global(.vtex-add-to-cart-button-0-x-buttonDataContainer){
+    height: 18px;
+    width: 300px;
+    padding-left: 4.5em;
+}
+
+.slideChildrenContainer--home__products--recommended
+:global(.vtex-button__label):hover{
+    color: #000;
+}
+
+
+.slideChildrenContainer--home__products--recommended
+:global(.vtex-product-summary-2-x-brandName){
+  font-size: 13px;
 }
