--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -78,3 +78,7 @@
 :global(.vtex-store-components-3-x-skuSelectorItemTextValue){
     color: #fff;
 }
+
+.skuSelectorSubcontainer{
+    margin-bottom: 10px;
+}
