--- a/styles/css/header/vtex.flex-layout.css
+++ b/styles/css/header/vtex.flex-layout.css
@@ -1,24 +1,58 @@
 /************** Header mobile ************/
 
-.flexRowContent--mobile__header--middle-animals{
+/* .flexRowContent--mobile__header--middle-animals{
     display: flex;
     flex-direction: row; 
-}
+} */
 
    
-.flexRow--mobile__header--middle-animals{
+/* .flexRow--mobile__header--middle-animals{
     width: 30%;
-}
+} */
 
 /********* Header desktop *************/
 
-.flexRowContent--desktop__header--menu{
+.flexRowContent--desktop__header--search{
+    width: 44.5em;
+    margin-left: 6%;
+}
+
+/* .flexRow--desktop__header--login-repurchase{
+    margin: 0 40px;
+} */
+
+.flexRowContent--desktop__header--login-repurchase{
+    display: flex;
+    align-items: center;
+}
+
+.flexRowContent--desktop__header--login-repurchase
+:global(.vtex-button__label):hover{
+    /* background: #fff; */
+    /* filter: grayscale(1); */
+    color: #fff;
+}
+
+/* .flexRowContent--desktop__header--menu{
     align-items: center;
     justify-content: space-between;
     width: 19em;
+} */
+.flexRowContent--desktop__header--menu
+:global(.vtex-flex-layout-0-x-stretchChildrenWidth){
+    width: 47% !important;
 }
 
-.flexCol--header__menu--animals{
+.flexRow--desktop__header--menu{
+    background: #f7f7f7;
+    border: 1px solid #050505;
+    margin: 0.5em 0 0.5em 2em;
+    /* padding: 2px 14px; */
+    border-radius: 10px;
+    width: 18.5em;
+}
+
+/* .flexCol--header__menu--animals{
     flex-direction: row;
     align-items: center;
     background: #f7f7f7;
@@ -28,12 +62,12 @@
     height: auto;
     border-radius: 10px;
     width: 11em;
-}
+} */
 
-.flexCol--header__menu--animals1{
+/* .flexCol--header__menu--animals1{
     flex-direction: row;
     align-items: center;
-}
+} */
 
 /*********** Minicart ************/
 
@@ -88,3 +122,14 @@
     padding-top: 10px;
 }
 
+@media (min-width:1024px) and (max-width: 1280px){
+    .flexRowContent--desktop__header--search{
+        width: 33em;
+        margin: 0;
+    }
+
+    .flexRow--desktop__header--menu{
+        margin-left: 0;
+        width: 14em
+    }
+}
