--- a/styles/css/header/vtex.minicart.css
+++ b/styles/css/header/vtex.minicart.css
@@ -131,8 +131,8 @@
     padding: 20px;
 }
 
-@media (min-width:1024px){
+/* @media (min-width:1024px){
     .minicartContainer{
         padding-left: 5em;
     }
-}
+} */
