--- a/styles/css/header/vtex.rich-text.css
+++ b/styles/css/header/vtex.rich-text.css
@@ -28,7 +28,7 @@
     height: 34px;
     text-align: center;
     cursor: pointer;
-    margin: 0 7em 0 -6em;
+    /* margin: 0 7em 0 -6em; */
 }
 
 .paragraph--desktop__header--pqr{
