--- a/styles/css/header/vtex.store-drawer.css
+++ b/styles/css/header/vtex.store-drawer.css
@@ -1,7 +1,7 @@
 .closeIconContainer{
     position: absolute;
     right: 0px;
-    top: -58px;
+    top: -4.7em;
     background: #f8971d;
 }
 
@@ -11,6 +11,10 @@
 
 .overlay{
     background: transparent;
+}
+
+.closeIcon--mobile__header--menu{
+    filter: invert(1);
 }
 
 
