--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,6 +1,7 @@
 .sliderLayoutContainer--home_slider{
     max-width: 100%;
-    margin: 4em 0 1em 0;
+    /* margin: 4em 0 1em 0; */
+    margin-bottom: 1em;
 }
 .paginationDotsContainer--home_slider{
     padding-bottom: 7px;
@@ -14,7 +15,7 @@
 /************** Slider mobile ******************/
 
 .sliderLayoutContainer--mobile__home--slider{
-    margin: 1em 0;
+    margin-bottom: 1em;
     max-width: 100%;
 }
 
