--- a/styles/css/search/vtex.flex-layout.css
+++ b/styles/css/search/vtex.flex-layout.css
@@ -1,3 +1,10 @@
+.flexRowContent--desktop__search--results-container{
+    display: flex;
+    flex-direction: column;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
 .flexCol--search__content--brand-name-sku{
     align-items: flex-start;
 }
