add structure of search results in category and subcategory, banner in search results by department and static page with responsive design

--- a/styles/css/search/vtex.flex-layout.css
+++ b/styles/css/search/vtex.flex-layout.css
@@ -5,6 +5,12 @@
     margin: 0 auto;
 }
 
+.flexRowContent--desktop__search--results-container
+:global(.vtex-flex-layout-0-x-flexRowContent--home__section--services2){
+    margin: 1em 0;
+    padding: 0 3em;
+}
+
 .flexCol--search__content--brand-name-sku{
     align-items: flex-start;
 }
@@ -131,5 +137,9 @@
     .flexColChild--search__content--brand-name-sku
     :global(.vtex-product-price-1-x-sellingPrice){
         margin-left: 0;
+    }
+
+    .flexCol--search__content--brand-name-sku{
+        margin-left: 2em;
     }
 }
